--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
   <li>branch: <code>master</code></li>
   <li>repo name: username.github.io</li>
   <li>github page url: http://username.github.io</li>
+  <a href = 'http://try.github.io/levels/1/challenges/1'>Learn git</a>
 </ul>
